
    R package: macroutils2

CHANGES IN VERSION 2.2.0
    
    2018/11/19  All example/test binary files were updated.
        FOCUS dummy substance GW-C was replaced by GW-D with 
        application every year, every other year or every third 
        year, so these configurations are tested too.
    
CHANGES IN VERSION 2.1.2
    
    2018/11/17  Small bug fix in macroutilsFocusGWConc, 
        formatting of an error message.
    
CHANGES IN VERSION 2.1.1
    
    2018/11/08  In macroutilsFocusGWConc():
        *   Fixed NaN values in the output of the fraction of 
            solute in the micropores or macropores when 
            the total solute flow was 0.
        *   Now also exports concentrations rounded like 
            in MACRO In FOCUS, in an attempt to get comparable 
            results (rounded to 2 digits after the decimal mark
            when displayed in scientific mode)
        
CHANGES IN VERSION 2.1.0
    
    2018/10/31  
        macroInFocusGWConc() renamed macroutilsFocusGWConc()
        
        macroutilsFocusGWConc() now outputs a list of data.frame.
        The new output format is documented.
        
        macroutilsFocusGWConc() now has an agrument "massunits" 
        to account for the fact that MACRO results may be 
        produced with different mass units (argument MASSUNITS 
        in MACRO).
        
        In all relevant functions (macroReadBin; macroWriteBin; 
        macroConvertBin; macroViewBin), 
        the argument "file" has been renamed "f" to avoid 
        clashes with the function file().
        
CHANGES IN VERSION 2.0.1
    
    2018/09/21  Added a new possible value for argument 
        'method' in macroInFocusGWConc(). If set to "test" 
        the function will even work on short simulations 
        used for functional tests.
    
CHANGES IN VERSION 2.0.0

    2018/08/27  Clone of the macroutils package created, 
        with the name macroutils2. The aim of macroutils2 