@@ -7,7 +7,13 @@ CHANGES IN VERSION 2.2.0
         FOCUS dummy substance GW-C was replaced by GW-D with 
         application every year, every other year or every third 
         year, so these configurations are tested too.
-    
+        
+    2018/11/21  In macroutilsFocusGWConc(), use signif() 
+        instead of own code to round 
+        concentrations like MACRO In FOCUS user interface, 
+        i.e. with 3 significant figures rather than a number 
+        of digits after the decimal mark.
+        
 CHANGES IN VERSION 2.1.2
     
     2018/11/17  Small bug fix in macroutilsFocusGWConc, 
